--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
     <ul>
       <li><a href="index.html">Dashboard</a></li>
       <li><a href="gallery.html">Gallery</a></li>
+      <section id="gallery">
+  <h2>Barangay Gallery</h2>
+  <div class="gallery-container">
+    <div class="gallery-item">
+      <img src="images/cleanup.jpg" alt="Clean-up Drive">
+      <p>Clean-up Drive: Volunteers cleaning the streets of our barangay.</p>
+    </div>
+    <div class="gallery-item">
+      <img src="images/feeding.jpg" alt="Feeding Program">
+      <p>Feeding Program: Free meals for children and seniors.</p>
+    </div>
+    <div class="gallery-item">
+      <img src="images/health.jpg" alt="Health Mission">
+      <p>Health Mission: Free checkups and medicine distribution.</p>
+    </div>
+  </div>
+</section>
+
       <li><a href="about.html">About</a></li>
       <li><a href="directory.html">Directory</a></li>
     </ul>
